# advent-of-code

./: .gitignore  Cargo.toml  Makefile  README.md
2022/day_01/task_1/: solution.py  tests.py
2022/day_01/task_2/: main.py  solution.py  tests.py
2022/day_02/task_1/: solution.py  tests.py
2022/day_02/task_2/: solution.py  tests.py
2022/day_03/task_1/: solution.py  tests.py
2022/day_03/task_2/: solution.py  tests.py
2022/day_04/task_1/: solution.py  tests.py
2022/day_04/task_2/: solution.py  tests.py
2022/day_05/task_1/: solution.py  tests.py
2022/day_05/task_2/: solution.py  tests.py
2022/day_06/task_1/: solution.py  tests.py
2022/day_06/task_2/: solution.py  tests.py
2022/day_07/task_1/: solution.py  tests.py
2022/day_07/task_2/: solution.py  tests.py
2022/day_08/task_1/: solution.py  tests.py
2022/day_08/task_2/: solution.py  tests.py
2022/day_09/task_1/: solution.py  tests.py
2022/day_09/task_2/: solution.py  tests.py
2022/day_10/task_1/: solution.py  tests.py
2022/day_10/task_2/: solution.py  tests.py
2022/day_11/task_1/: solution.py  tests.py
2022/day_11/task_2/: solution.py  tests.py
2022/day_12/task_1/: solution.py  tests.py
2022/day_12/task_2/: solution.py  tests.py
2022/day_13/task_1/: solution.py
2022/day_13/task_2/: solution.py  tests.py
2022/day_14/task_1/: solution.py  tests.py
2022/day_14/task_2/: solution.py  tests.py
2022/day_15/task_1/: solution.py  tests.py
2022/day_15/task_2/: solution.py  tests.py
2022/day_16/task_1/: solution.py  tests.py
2022/day_16/task_2/: solution.py  tests.py
2022/day_17/task_1/: solution.py  tests.py
2022/day_17/task_2/: solution.py  tests.py
2022/day_18/task_1/: solution.py  tests.py
2022/day_18/task_2/: solution.py  tests.py
2023/: README.md
2024/: README.md
2024/day_22/task_1/: Cargo.toml
2024/day_22/task_1/src/: lib.rs  main.rs
aoc_utils/src/: direction.rs  grid.rs  lib.rs  math.rs  position.rs  traits.rs
auto-gen/: Cargo.toml  go_template.js
auto-gen/src/: main.rs
build_utils/: Cargo.toml  go_template.js  missing_template.js  python_template.js  rust_template.js
build_utils/src/: main.rs
frontend/: Cargo.toml  Makefile  dispatcher.js  form.js  index.html  main.js  package-lock.json  package.json  styles.css  worker.js
frontend/src/: lib.rs
init_utils/: go.mod  main.go  rust_setup.go  selector.go  utils.go
terraform/: cloudfront.tf  terraform.tf
(+390 files in other folders)
