[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[workspace]
resolver = "3"
members = [
  "2023/day_07/task_1",
  "2023/day_07/task_2",
  "2023/day_09/task_1",
  "2023/day_09/task_2",
  "2023/day_10/task_1",
  "2023/day_10/task_2",
  "2023/day_11/task_1",
  "2023/day_11/task_2",
  "2023/day_12/task_1",
  "2023/day_12/task_2",
  "2023/day_13/task_1",
  "2023/day_13/task_2",
  "2023/day_14/task_1",
  "2023/day_14/task_2",
  "2023/day_15/task_1",
  "2023/day_15/task_2",
  "2023/day_16/task_1",
  "2023/day_16/task_2",
  "2023/day_17/task_1",
  "2023/day_17/task_2",
  "2023/day_18/task_1",
  "2023/day_18/task_2",
  "2023/day_19/task_1",
  "2023/day_19/task_2",
  "2024/day_01/task_1",
  "2024/day_01/task_2",
  "2024/day_02/task_1",
  "2024/day_02/task_2",
  "2024/day_03/task_1",
  "2024/day_03/task_2",
  "2024/day_04/task_1",
  "2024/day_04/task_2",
  "2024/day_05/task_1",
  "2024/day_05/task_2",
  "2024/day_06/task_1",
  "2024/day_06/task_2",
  "2024/day_07/task_1",
  "2024/day_07/task_2",
  "2024/day_08/task_1",
  "2024/day_08/task_2",
  "2024/day_09/task_1",
  "2024/day_09/task_2",
  "2024/day_10/task_1",
  "2024/day_10/task_2",
  "2024/day_11/task_1",
  "2024/day_11/task_2",
  "2024/day_12/task_1",
  "2024/day_12/task_2",
  "2024/day_13/task_1",
  "2024/day_13/task_2",
  "2024/day_14/task_1",
  "2024/day_14/task_2",
  "2024/day_15/task_1",
  "2024/day_15/task_2",
  "2024/day_16/task_1",
  "2024/day_16/task_2",
  "2024/day_17/task_1",
  "2024/day_17/task_2",
  "2024/day_18/task_1",
  "2024/day_18/task_2",
  "2024/day_19/task_1",
  "2024/day_19/task_2",
  "2024/day_20/task_1",
  "2024/day_20/task_2",
  "2024/day_21/task_1",
  "2024/day_21/task_2",
  "2024/day_22/task_1",
  "2024/day_22/task_2",
  "2024/day_23/task_1",
  "2024/day_23/task_2",
  "2024/day_24/task_1",
  "2024/day_24/task_2",
  "2024/day_25/task_1",
  "2024/day_25/task_2",
  "2025/day_10/task_2",
  "aoc_utils",
  "build_utils",
]
