[package]
name = "solution_2024_22_1"
version = "0.1.0"
edition = "2024"

[lib]
name = "solution_2024_22_1"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
wasm-bindgen = "0.2.100"
aoc_utils = { path = "../../../aoc_utils" }
